change task image

--- a/tasks/collect-gpu-log.yaml
+++ b/tasks/collect-gpu-log.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: run col_gpu_log.sh to collect gpu log and upload to s3
-  runtimeImage: shaowenchen/ops-cli:latest
+  runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/ops-cli:latest
   variables:
     ak:
       display: access key
@@ -28,16 +28,16 @@ spec:
         rm -rf /tmp/col-gpu-log-${random} || true
         mkdir -p /tmp/col-gpu-log-${random} && cd /tmp/col-gpu-log-${random}
         curl -sfL https://ghp.ci/https://raw.githubusercontent.com/shaowenchen/hubimage/main/ai/col_gpu_log.sh | bash
-        mv *.tar.gz ${hostname}-col-gpu-log-${random}.tar.gz
+        mv *.tar.gz ${HOSTNAME}-col-gpu-log-${random}.tar.gz
     - name: upload to s3
-      remotefile: s3://collect-gpu-log/${hostname}-col-gpu-log-${random}.tar.gz
-      localfile: /tmp/col-gpu-log-${random}/${hostname}-col-gpu-log-${random}.tar.gz
+      remotefile: s3://collect-gpu-log/${HOSTNAME}-col-gpu-log-${random}.tar.gz
+      localfile: /tmp/col-gpu-log-${random}/${HOSTNAME}-col-gpu-log-${random}.tar.gz
       direction: upload
     - name: get 2h shared link
       content: |
         curl -sfL https://ks3util-version-update.ks3-cn-beijing.ksyuncs.com/2.6.0/ks3util-linux-amd64 -o /usr/local/bin/ks3util >/dev/null
         chmod +x /usr/local/bin/ks3util
-        /usr/local/bin/ks3util sign ks3://${bucket}/collect-gpu-log/${hostname}-col-gpu-log-${random}.tar.gz --endpoint ${endpoint} --timeout 7200 -i ${ak} -k ${sk}
+        /usr/local/bin/ks3util sign ks3://${bucket}/collect-gpu-log/${HOSTNAME}-col-gpu-log-${random}.tar.gz --endpoint ${endpoint} --timeout 7200 -i ${ak} -k ${sk}
     - name: clean
       content: |
         rm -rf /tmp/col-gpu-log-${random} || true
