--- a/tasks/get-diskio-byfio.yaml
+++ b/tasks/get-diskio-byfio.yaml
@@ -6,24 +6,30 @@ metadata:
 spec:
   desc: run fio to test disk and get a report in specified path for specified host
   variables:
-    filename: 
+    filename:
       default: "/tmp/testfile"
-    size: 
+    direct:
+      default: "1"
+    ioengine:
+      default: "libaio"
+    bs:
+      default: "4k"
+    size:
       default: "100m"
   steps:
     - name: Rand_Read_Testing
-      content: fio -direct=1 -iodepth=128 -rw=randread -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Read_Testing
+      content: fio -direct=${direct} -iodepth=128 -rw=randread -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Read_Testing
     - name: Rand_Write_Testing
-      content: fio -direct=1 -iodepth=128 -rw=randwrite -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Write_Testing
+      content: fio -direct=${direct} -iodepth=128 -rw=randwrite -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Write_Testing
     - name: Sequ_Read_Testing
-      content: fio -direct=1 -iodepth=32 -rw=read -ioengine=libaio -bs=128k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Sequ_Read_Testing
+      content: fio -direct=${direct} -iodepth=32 -rw=read -ioengine=${ioengine} -bs=128k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Sequ_Read_Testing
     - name: Sequ_Write_Testing
-      content: fio -direct=1 -iodepth=32 -rw=write -ioengine=libaio -bs=128k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Sequ_Write_Testing
+      content: fio -direct=${direct} -iodepth=32 -rw=write -ioengine=${ioengine} -bs=128k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Sequ_Write_Testing
     - name: Rand_Read_IOPS_Testing
-      content: fio -direct=1 -iodepth=32 -rw=randread -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Read_IOPS_Testing
+      content: fio -direct=${direct} -iodepth=32 -rw=randread -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Read_IOPS_Testing
     - name: Rand_Write_IOPS_Testing
-      content: fio -direct=1 -iodepth=32 -rw=randwrite -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Write_IOPS_Testing
+      content: fio -direct=${direct} -iodepth=32 -rw=randwrite -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Write_IOPS_Testing
     - name: Rand_Read_Latency_Testing
-      content: fio -direct=1 -iodepth=1 -rw=randread -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Read_Latency_Testing
+      content: fio -direct=${direct} -iodepth=1 -rw=randread -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Read_Latency_Testing
     - name: Rand_Write_Latency_Testing
-      content: fio -direct=1 -iodepth=1 -rw=randwrite -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Write_Latency_Testing
+      content: fio -direct=${direct} -iodepth=1 -rw=randwrite -ioengine=${ioengine} -bs=${bs} -size=${size} -numjobs=1 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Write_Latency_Testing
