--- a/tasks/alert-node-event.yaml
+++ b/tasks/alert-node-event.yaml
@@ -14,21 +14,18 @@ spec:
               import requests
               import json
 
-              cluster = "${CLUSTER}"
-              hostname = "${HOSTNAME}"
               keywords = ["NodeNotReady"]
               message = ""
 
               def send(status, message):
                   payload = {
-                      "cluster": cluster,
-                      "hostname": hostname,
-                      "kind": "alert-node-event",
+                      "hostname": "${HOSTNAME}",
+                      "kind": "${TASK_NAME}",
                       "status": status,
                       "message": message,
                   }
                   headers = {"Content-Type": "application/json"}
-                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/check', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/check/subjects/${TASK_NAME}.${HOSTNAME}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
 
