--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -20,15 +20,15 @@ spec:
 
               def send(status, message):
                   payload = {
-                      'host': '${HOSTNAME}',
-                      'kind': '${TASK_NAME}',
+                      'host': '${HOST}',
+                      'kind': '${TASK}',
                       'status': status,
                       'message': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/check/subjects/${TASK_NAME}.${HOSTNAME}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/events/ops.${CLUSTER}.check.${TASK}.${HOST}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               def get_config_maps(namespace="kube-system"):
