--- a/charts/ops/templates/deployment-server.yaml
+++ b/charts/ops/templates/deployment-server.yaml
@@ -50,8 +50,10 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
-            - name: CLUSTER
+            - name: EVENT_CLUSTER
               value: "default"
+            - name: EVENT_ADDRESS
+              value: http://app:mypassword@nats-headless.ops-system.svc:4222
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
