--- a/tasks/alert-healthz.yaml
+++ b/tasks/alert-healthz.yaml
@@ -18,14 +18,14 @@ spec:
 
               def send(status, message):
                   payload = {
-                      'kind': '${TASK}',
+                      'kind': '${TASKRUN}',
                       'status': status,
                       'message': message
                   }
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/check.${TASK}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENT_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               send('success', 'cluster healthz is ok')
