--- a/tasks/alert-gpu-ecc.yaml
+++ b/tasks/alert-gpu-ecc.yaml
@@ -23,8 +23,8 @@ spec:
 
               def send(status, message):
                   payload = {
-                      'host': '${HOST}',
-                      'kind': '${TASK}',
+                      'host': '${HOSTNAME}',
+                      'kind': '${TASKRUN}',
                       'threshold': str(threshold),
                       'operator': '==',
                       'status': status,
@@ -33,7 +33,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/check.${TASK}.${HOST}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENT_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.${HOSTNAME}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               def build_message(message, card_id=''):
