--- a/tasks/alert-gpu-fabric.yaml
+++ b/tasks/alert-gpu-fabric.yaml
@@ -24,8 +24,8 @@ spec:
 
         def send(status, message):
             payload = {
-                'host': '${HOST}',
-                'kind': '${TASK}',
+                'host': '${HOSTNAME}',
+                'kind': '${TASKRUN}',
                 'threshold': str(threshold),
                 'operator': '>',
                 'status': status,
@@ -34,7 +34,7 @@ spec:
             headers = {
                 'Content-Type': 'application/json'
             }
-            response = requests.post('${EVENTBUS_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/check.${TASK}.${HOST}', headers=headers, data=json.dumps(payload))
+            response = requests.post('${EVENT_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.${HOSTNAME}', headers=headers, data=json.dumps(payload))
             print(response.text)
 
         def is_fabricmanager_installed():
