--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -27,8 +27,8 @@ spec:
 
               def send(status, message):
                   payload = {
-                      'host': '${HOST}',
-                      'kind': '${TASK}',
+                      'host': '${HOSTNAME}',
+                      'kind': '${TASKRUN}',
                       'threshold': str(threshold),
                       'operator': '!=',
                       'status': status,
@@ -37,7 +37,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENTBUS_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/check.${TASK}.${url}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENT_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.${url}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               try:
