change event address to endpoint

--- a/charts/ops/templates/deployment-server.yaml
+++ b/charts/ops/templates/deployment-server.yaml
@@ -52,7 +52,7 @@ spec:
           env:
             - name: EVENT_CLUSTER
               value: "default"
-            - name: EVENT_ADDRESS
+            - name: EVENT_ENDPOINT
               value: http://app:mypassword@nats-headless.ops-system.svc:4222
       {{- with .Values.nodeSelector }}
       nodeSelector:
