--- a/charts/ops/templates/deployment.yaml
+++ b/charts/ops/templates/deployment.yaml
@@ -64,7 +64,7 @@ spec:
               value: registry.cn-hangzhou.aliyuncs.com/opshub/ubuntu:22.04
             - name: EVENT_CLUSTER
               value: "default"
-            - name: EVENT_ADDRESS
+            - name: EVENT_ENDPOINT
               value: http://app:mypassword@nats-headless.ops-system.svc:4222
       {{- with .Values.nodeSelector }}
       nodeSelector:
