--- a/default.toml
+++ b/default.toml
@@ -9,4 +9,4 @@ opsserver="http://myops-server.ops-system.svc"
 opstoken="ops"
 [event]
 cluster=default
-address=http://app:mypassword@nats-headless.ops-system.svc:4222
+endpoint=http://app:mypassword@nats-headless.ops-system.svc:4222
