--- a/tasks/alert-pod-status.yaml
+++ b/tasks/alert-pod-status.yaml
@@ -34,7 +34,7 @@ spec:
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.post('${EVENT_ADDRESS}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${EVENT_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               def get_pods():
