fix ops server endpoint for taskrun

--- a/tasks/alert-node-event.yaml
+++ b/tasks/alert-node-event.yaml
@@ -25,7 +25,7 @@ spec:
                       "message": message,
                   }
                   headers = {"Content-Type": "application/json"}
-                  response = requests.post('${EVENT_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.${HOSTNAME}', headers=headers, data=json.dumps(payload))
+                  response = requests.post('${OPSSERVER_ENDPOINT}/api/v1/namespaces/${NAMESPACE}/events/taskruns.${TASKRUN}.reports.${HOSTNAME}', headers=headers, data=json.dumps(payload))
                   print(response.text)
 
 
