fix event query

--- a/default.toml
+++ b/default.toml
@@ -8,5 +8,5 @@ model="gpt-3.5-turbo-16k"
 opsserver="http://myops-server.ops-system.svc"
 opstoken="ops"
 [event]
-cluster=default
-endpoint=http://app:mypassword@nats-headless.ops-system.svc:4222
+cluster="default"
+endpoint="http://app:mypassword@nats-headless.ops-system.svc:4222"
