--- a/charts/ops/templates/clusterrole.yaml
+++ b/charts/ops/templates/clusterrole.yaml
@@ -175,6 +175,32 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - eventhooks
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - eventhooks/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - eventhooks/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - "events.k8s.io" 
   resources:
   - events
