--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - bases/crd.chenshaowen.com_taskruns.yaml
 - bases/crd.chenshaowen.com_pipelines.yaml
 - bases/crd.chenshaowen.com_pipelineruns.yaml
+- bases/crd.chenshaowen.com_eventhooks.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -19,6 +20,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_taskruns.yaml
 #- patches/webhook_in_pipelines.yaml
 #- patches/webhook_in_pipelineruns.yaml
+#- patches/webhook_in_eventhooks.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -29,6 +31,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_taskruns.yaml
 #- patches/cainjection_in_pipelines.yaml
 #- patches/cainjection_in_pipelineruns.yaml
+#- patches/webhook_in_eventhooks.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
