--- a/tasks/alert-http-status.yaml
+++ b/tasks/alert-http-status.yaml
@@ -54,6 +54,6 @@ spec:
 
               finally:
                   if len(message) > 0:
-                      send('alert', message)
+                      send('alerting', message)
                   else:
                       send('normal', '')
