--- a/tasks/alert-npu-drop.yaml
+++ b/tasks/alert-npu-drop.yaml
@@ -75,6 +75,6 @@ spec:
                       message = str(e)
               finally:
                   if len(message) > 0:
-                      send('alert', message)
+                      send('alerting', message)
                   else:
                       send('normal', message)
