--- a/tasks/alert-dataset-notready.yaml
+++ b/tasks/alert-dataset-notready.yaml
@@ -64,7 +64,7 @@ spec:
                           age_time = current_time - timedelta(minutes=age_minutes)
                       if (current_time - age_time).total_seconds() > 300:
                           message = f"<br>- namespace: {namespace}<br>- dataset: {name}<br>- status: {phase} {age_str}"
-                          send('alert', message)
+                          send('alerting', message)
 
               except Exception as e:
-                  send('alert', str(e))
+                  send('alerting', str(e))
