--- a/tasks/alert-gpu-fabric.yaml
+++ b/tasks/alert-gpu-fabric.yaml
@@ -93,6 +93,6 @@ spec:
                 message = str(e)
         finally:
             if len(message) > 0:
-                send('alert', message)
+                send('alerting', message)
             else:
                 send('normal', message)
