--- a/tasks/alert-gpu-zombie.yaml
+++ b/tasks/alert-gpu-zombie.yaml
@@ -63,6 +63,6 @@ spec:
                       message = build_message(str(e))
               finally:
                   if len(message) > 0:
-                      send('alert', message)
+                      send('alerting', message)
                   else:
                       send('normal', message)
