--- a/tasks/alert-node-event.yaml
+++ b/tasks/alert-node-event.yaml
@@ -89,8 +89,8 @@ spec:
                       if describe_output:
                           event_errors = parse_events(describe_output)
                           if event_errors:
-                              send("alert", f"<br>- host: {node_name}<br>- events: {event_errors}")
+                              send("alerting", f"<br>- host: {node_name}<br>- events: {event_errors}")
 
               except Exception as e:
                   message = str(e)
-                  send("alert", message)
+                  send("alerting", message)
