--- a/tasks/collect-gpu-log.yaml
+++ b/tasks/collect-gpu-log.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: run col_gpu_log.sh to collect gpu log and upload to s3
-  runtimeImage: registry.cn-hangzhou.aliyuncs.com/shaowenchen/ops-cli:latest
+  runtimeImage: registry.cn-beijing.aliyuncs.com/shaowenchen/ops-cli:latest
   variables:
     ak:
       display: access key
