--- a/charts/ops/values.yaml
+++ b/charts/ops/values.yaml
@@ -5,14 +5,14 @@
 replicaCount: 1
 
 image:
-  repository: registry.cn-hangzhou.aliyuncs.com/shaowenchen/ops-controller-manager
+  repository: registry.cn-beijing.aliyuncs.com/shaowenchen/ops-controller-manager
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v1.0.0"
 
 server:
   image:
-    repository: registry.cn-hangzhou.aliyuncs.com/shaowenchen/ops-server
+    repository: registry.cn-beijing.aliyuncs.com/shaowenchen/ops-server
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: "v1.0.0"
