--- a/eventhooks/pods-no-healthy-devices.yaml
+++ b/eventhooks/pods-no-healthy-devices.yaml
@@ -1,12 +1,12 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: EventHooks
 metadata:
-  name: pods-no-free-node
+  name: pods-no-healthy-devices
   namespace: ops-system
 spec:
   additional: "action: restart-kubelet-bypod"
   keywords:
-    - no free node
+    - no healthy devices
   subject: ops.clusters.*.namespaces.*.pods.*.event
   type: webhook
   url: http://x.x.x.x/webhook
